syntax = "proto3";
option csharp_namespace = "NotificationManagement.Presentation.Api.GRPC.Proto";


service NotoficationManagementService{
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message SendMessageResponse{
	bool IsSuccessfull=1;
}

message SendMessageRequest{
    Message message = 1;
}

message Message{
    string Content = 1;
    string Title = 2;
}